feat: startGame, drop first pseudo-piece

--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.scss">
-    <title>Typetris</title>
+    <title>Test</title>
 </head>
 <body>
     <div class="container">
         <canvas id="board" class="board"></canvas>
         <div>
-            <h1>TETRIS</h1>
+            <h1>test</h1>
             <p>Score: <span id="score">0</span></p>
             <p>Lines: <span id="lines">0</span></p>
             <p>Level: <span id="level">0</span></p>
-            <button>Start</button>
+            <button id="startButton">Start</button>
         </div>
         <script type="module" src="main.ts"></script>
     </div>
