--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <title>Test</title>
     </head>
     <body>
+        <div id="tetris"></div>
         <script type="module" src="main.ts"></script>
     </body>
 </html>
