--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         <link href="./index.scss" rel="stylesheet">
         <title>Test</title>
     </head>
-    <body>
+    <body class="text-white bg-gray-800">
         <div id="tetris"></div>
         <script type="module" src="main.ts"></script>
     </body>
