style: update startGame view

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="./index.scss" rel="stylesheet">
-        <title>Test</title>
+        <title>Typetris</title>
     </head>
     <body class="text-white bg-gray-800">
         <div id="tetris"></div>
