refactor: folder/file structure

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="./index.scss" rel="stylesheet">
+        <link href="./styles/index.scss" rel="stylesheet">
         <title>Typetris</title>
     </head>
-    <body class="text-white bg-gray-800">
+    <body>
         <div id="tetris"></div>
         <script type="module" src="main.ts"></script>
     </body>
