--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="./styles/index.scss" rel="stylesheet">
         <title>Typetris</title>
+        <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+        <link href="./styles/index.scss" rel="stylesheet">
+
     </head>
     <body>
         <div id="tetris"></div>
